tests/ui/occurs-check.stderr
error[E0308]: mismatched types
  --> $DIR/occurs-check.rs:5:9
   |
LL |     f = Box::new(f);
   |         ^^^^^^^^^^^ cyclic type of infinite size
   |
help: consider unboxing the value
   |
LL |     f = *Box::new(f);
   |         +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
